Store the values internally also as BigInteger